Replace Hamcrest with AssertJ in BaseProcTest
- assertCypherResult can now also take AssertJ Conditions
- remove now unnecessary ListUtil
- fix failing tests due to previous bad assertion

Co-authored-by: Veselin Nikolov <veselin.nikolov@neotechnology.com>